--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.1.1",
     "element-plus": "^1.0.2-beta.69",
     "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
@@ -19,6 +20,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
