--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "crypto-js": "^4.1.1",
     "dayjs": "^1.10.6",
     "element-plus": "^1.0.2-beta.69",
+    "mitt": "^3.0.0",
     "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.10",
