--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.10.6",
+    "echarts": "^5.2.0",
     "element-plus": "^1.0.2-beta.69",
     "mitt": "^3.0.0",
     "normalize.css": "^8.0.1",
