--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "element-plus": "^1.0.2-beta.69",
     "mitt": "^3.0.0",
     "normalize.css": "^8.0.1",
+    "typed.js": "^2.0.12",
+    "vditor": "^3.8.6",
     "vue": "^3.0.0",
     "vue-router": "^4.0.10",
     "vuex": "^4.0.2"
@@ -41,7 +43,9 @@
     "husky": "^7.0.1",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "node-sass": "^6.0.1",
     "prettier": "^2.3.2",
+    "sass-loader": "^12.1.0",
     "typescript": "~4.1.5"
   }
 }
